--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "example": "prettier --plugin . example.toml",
+    "example": "prettier --write --plugin . example.js",
+    "ex": "prettier --write example.js --plugin-search-dir=./src ",
+    "prettier": "prettier example.js",
     "test": "jest"
   },
   "keywords": [
@@ -18,11 +20,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "prettier": "^1.15.3",
+    "prettier": "^2.8.3",
     "toml": "^2.3.5"
   },
   "devDependencies": {
-    "jest": "^24.0.0",
+    "jest": "^29.4.1",
     "jest-watch-typeahead": "^0.2.1"
   }
 }
