--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "keywords": [
     "prettier",
-    "toml",
     "plugin"
   ],
   "author": {
@@ -20,8 +19,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "prettier": "^2.8.3",
-    "toml": "^2.3.5"
+    "prettier": "^2.8.3"
   },
   "devDependencies": {
     "jest": "^29.4.1",
