--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "prettier-plugin-delete-eslint-disable",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "example": "prettier --plugin . example.toml",
     "test": "jest"
@@ -12,17 +12,44 @@
     "toml",
     "plugin"
   ],
+  "files": [
+    "index.js",
+    "lib",
+    "prettier.d.ts"
+  ],
+  "peerDependencies": {
+    "prettier": ">=2.0",
+    "typescript": ">=2.9"
+  },
   "author": {
     "name": "bad4iz",
     "email": "developer@bad4iz.ru"
   },
   "license": "MIT",
   "dependencies": {
-    "prettier": "^1.15.3",
-    "toml": "^2.3.5"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "useTabs": true,
+    "overrides": [
+      {
+        "files": [
+          "package.json",
+          "*.md"
+        ],
+        "options": {
+          "useTabs": false
+        }
+      }
+    ]
   },
   "devDependencies": {
+    "@types/node": "18.11.9",
+    "@types/prettier": "2.7.1",
     "jest": "^24.0.0",
-    "jest-watch-typeahead": "^0.2.1"
+    "prettier": "2.7.1",
+    "typescript": "4.8.4"
   }
 }
