--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "example": "prettier --plugin . example.toml",
     "test": "jest"
   },
   "keywords": [
@@ -17,37 +16,18 @@
     "prettier.d.ts"
   ],
   "peerDependencies": {
-    "prettier": ">=2.0",
-    "typescript": ">=2.9"
+    "prettier": ">=2.7",
+    "typescript": ">=4.8.4"
   },
   "author": {
     "name": "bad4iz",
     "email": "developer@bad4iz.ru"
   },
   "license": "MIT",
-  "dependencies": {
-  },
-  "prettier": {
-    "printWidth": 120,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "useTabs": true,
-    "overrides": [
-      {
-        "files": [
-          "package.json",
-          "*.md"
-        ],
-        "options": {
-          "useTabs": false
-        }
-      }
-    ]
-  },
   "devDependencies": {
     "@types/node": "18.11.9",
     "@types/prettier": "2.7.1",
-    "jest": "^24.0.0",
+    "jest": "29.4.1",
     "prettier": "2.7.1",
     "typescript": "4.8.4"
   }
