--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prettier-plugin-delete-eslint-disable",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Plugin for prettier. Which removes the eslint-disable rules when editing a file and many other useful things",
   "main": "index.js",
   "scripts": {
     "test": "jest"
@@ -30,5 +30,13 @@
     "jest": "29.4.1",
     "prettier": "2.7.1",
     "typescript": "4.8.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bad4iz/prettier-plugin-delete-eslint-disable.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bad4iz/prettier-plugin-delete-eslint-disable/issues"
+  },
+  "homepage": "https://github.com/bad4iz/prettier-plugin-delete-eslint-disable#readme"
 }
