--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Plugin for prettier. Which removes the eslint-disable rules when editing a file and many other useful things",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "local:push": "yalc push",
     "build-library": "tsc",
     "build-library:watch": "tsc-watch --onSuccess \"yalc push\""
@@ -28,11 +28,11 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "18.11.9",
-    "@types/prettier": "2.7.1",
-    "jest": "29.4.1",
-    "prettier": "2.7.1",
-    "typescript": "4.8.4"
+    "@types/node": "22.14.0",
+    "@types/prettier": "2.7.3",
+    "jest": "29.7.0",
+    "prettier": "3.5.3",
+    "typescript": "5.8.2"
   },
   "repository": {
     "type": "git",
