--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "prettier-plugin-delete-eslint-disable",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Plugin for prettier. Which removes the eslint-disable rules when editing a file and many other useful things",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test": "jest",
     "local:push": "yalc push",
     "build-library": "tsc",
     "build-library:watch": "tsc-watch --onSuccess \"yalc push\""
